; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_spi.c_SPIDataGetNonBlocking.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_spi.c_SPIDataGetNonBlocking.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MCSPI_O_CH0STAT = common dso_local global i64 0, align 8
@MCSPI_CH0STAT_RXS = common dso_local global i64 0, align 8
@MCSPI_O_RX0 = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @SPIDataGetNonBlocking(i64 %0, i64* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64* %1, i64** %5, align 8
  %7 = load i64, i64* %4, align 8
  %8 = load i64, i64* @MCSPI_O_CH0STAT, align 8
  %9 = add i64 %7, %8
  %10 = call i64 @HWREG(i64 %9)
  store i64 %10, i64* %6, align 8
  %11 = load i64, i64* %6, align 8
  %12 = load i64, i64* @MCSPI_CH0STAT_RXS, align 8
  %13 = and i64 %11, %12
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %21

15:                                               ; preds = %2
  %16 = load i64, i64* %4, align 8
  %17 = load i64, i64* @MCSPI_O_RX0, align 8
  %18 = add i64 %16, %17
  %19 = call i64 @HWREG(i64 %18)
  %20 = load i64*, i64** %5, align 8
  store i64 %19, i64* %20, align 8
  store i64 1, i64* %3, align 8
  br label %22

21:                                               ; preds = %2
  store i64 0, i64* %3, align 8
  br label %22

22:                                               ; preds = %21, %15
  %23 = load i64, i64* %3, align 8
  ret i64 %23
}

declare dso_local i64 @HWREG(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
